# app/confRouter.go
@@ -10,7 +10,9 @@ func (app *App) setRouters() {
 	app.GetQueryBarangSort("/v1/otlet/listtransaksi", app.ListTransaksi)
 	app.GetQueryBarang("/v1/otlet/listkategori", app.ListKategori)
 	app.GetQueryBarang("/v1/otlet/listpersediaan", app.ListPersediaanBarang)
+	app.GetQueryBarang("/v1/otlet/listpelanggan", app.ListPelanggan)
 	app.GetBarangInformation("/v1/otlet/baranginfo", app.BarangInformations)
+	app.GetQueryPelanggan("/v1/otlet/infopelanggan", app.DetailPelanggan)
 	app.Post("/v1/otlet/registrasi", app.RegisterUser)
 	app.Post("/v1/otlet/addkategori", app.AddKategori)
 	app.Post("/v1/otlet/addsuplier", app.AddSuplier)
