# controller/Account/ownerotlet/pelanggan/addPelanggan.go
@@ -3,6 +3,7 @@ package pelanggan
 import (
 	"github.com/jinzhu/gorm"
 	"hara-depo-proj/model/mobile"
+	"hara-depo-proj/otp"
 	"hara-depo-proj/util"
 	"net/http"
 )
@@ -10,6 +11,7 @@ import (
 func AddPelanggan(db1 *gorm.DB, w http.ResponseWriter, r *http.Request) {
 
 	pelanggan := mobile.Pelanggan{}
+	transaksi := mobile.TransaksiUang{}
 
 	KodeUser := r.FormValue("KodeUser")
 	NamaSuplier := r.FormValue("NamaPelanggan")
@@ -32,6 +34,17 @@ func AddPelanggan(db1 *gorm.DB, w http.ResponseWriter, r *http.Request) {
 	if err := db1.Save(&pelanggan).Error; err != nil {
 		util.RespondError(w, http.StatusInternalServerError, err.Error())
 		return
+	}
+
+	if err := db1.Select("id_pelanggan").Where("id_pelanggan=? AND kode_user=?", pelanggan.IDPelanggan, pelanggan.KodeUser).
+		First(&transaksi).Error; err != nil {
+		kodeTransaksi := otp.RandomStringOTP(6)
+		transaksi.IdPelanggan = pelanggan.IDPelanggan
+		transaksi.IdTransaksi = kodeTransaksi
+		if err := db1.Save(&transaksi).Error; err != nil {
+			util.RespondError(w, http.StatusInternalServerError, err.Error())
+			return
+		}
 	}
 
 	util.RespondJSON(w, 202, pelanggan)
